<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/add_city_view_height"
    android:background="@color/white_100">

    <ImageView
        android:layout_width="@dimen/add_city_view_icon_width"
        android:layout_height="@dimen/add_city_view_icon_height"
        android:layout_marginStart="@dimen/margin_06"
        android:contentDescription="@string/content_description_search_icon"
        android:src="@mipmap/ic_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/et_city"
        style="@style/SubtitleStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_06"
        android:background="@drawable/bg_edit_text"
        android:autofillHints="postalAddress"
        android:hint="@string/input_field_hint_enter_city_name"
        android:textColorHint="@color/black_100"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/gl"
        app:layout_constraintEnd_toStartOf="@id/iv_confirm"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/iv_confirm"
        android:layout_width="@dimen/add_city_view_icon_width"
        android:layout_height="@dimen/add_city_view_icon_height"
        android:layout_marginEnd="@dimen/margin_06"
        android:contentDescription="@string/content_description_check_icon"
        android:scaleType="center"
        android:src="@drawable/ic_check"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"/>

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/add_city_view_divider_height"
        android:background="@color/snowbank_100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"/>
</androidx.constraintlayout.widget.ConstraintLayout>